fixed the layout issue and integrated the payment gateway

--- a/Version 1.1/original/css/styles.css
+++ b/Version 1.1/original/css/styles.css
@@ -1679,6 +1679,11 @@ header .turquoise-2 {
         margin-right: auto;
         margin-left: auto
     }
+
+    .p-heading-e {
+        width: 85%;
+        margin: 1rem auto;
+    }
 }
 
 /* <------------------------------------------------55555555555555555555555555----------------------------------------->*/
@@ -1813,9 +1818,6 @@ header .turquoise-2 {
         font-size: 2.6rem;
     }
 
-
-
-
 }
 
 /* <----------------------------------77777777777777777777777777777777----------------------------------------------------->*/
@@ -1861,15 +1863,20 @@ header .turquoise-2 {
 
 }
 
-/* <---------------------------------------------888888888888888888888888--------------------------------------------------------->*/
+/* <------------------------------------8888888888888888888888888888888888------------------------------------------------------->*/
 
 
-@media (min-width:768px) {
-    .p-heading-e {
-        width: 85%;
-        margin: 1rem auto;
+@media (max-width:403px) {
+    .btn-solid-lg {
+        margin-bottom: .8rem;
     }
+
+    .btn-outline-lg {
+        margin-left: 0;
+    }
+
 }
+
 
 /* <------------------------------------------------------------------------------------------------------------------------------>*/
 
